; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/arm/extr_powertec.c_powertecscsi_show_term.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/arm/extr_powertec.c_powertecscsi_show_term.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.expansion_card = type { i32 }
%struct.Scsi_Host = type { i64 }
%struct.powertec_info = type { i64 }

@.str = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @powertecscsi_show_term to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @powertecscsi_show_term(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device_attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.expansion_card*, align 8
  %8 = alloca %struct.Scsi_Host*, align 8
  %9 = alloca %struct.powertec_info*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  %10 = load %struct.device*, %struct.device** %4, align 8
  %11 = call %struct.expansion_card* @ECARD_DEV(%struct.device* %10)
  store %struct.expansion_card* %11, %struct.expansion_card** %7, align 8
  %12 = load %struct.expansion_card*, %struct.expansion_card** %7, align 8
  %13 = call %struct.Scsi_Host* @ecard_get_drvdata(%struct.expansion_card* %12)
  store %struct.Scsi_Host* %13, %struct.Scsi_Host** %8, align 8
  %14 = load %struct.Scsi_Host*, %struct.Scsi_Host** %8, align 8
  %15 = getelementptr inbounds %struct.Scsi_Host, %struct.Scsi_Host* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = inttoptr i64 %16 to %struct.powertec_info*
  store %struct.powertec_info* %17, %struct.powertec_info** %9, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = load %struct.powertec_info*, %struct.powertec_info** %9, align 8
  %20 = getelementptr inbounds %struct.powertec_info, %struct.powertec_info* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  %23 = zext i1 %22 to i64
  %24 = select i1 %22, i32 1, i32 0
  %25 = call i32 @sprintf(i8* %18, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %24)
  ret i32 %25
}

declare dso_local %struct.expansion_card* @ECARD_DEV(%struct.device*) #1

declare dso_local %struct.Scsi_Host* @ecard_get_drvdata(%struct.expansion_card*) #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
